<resources>
    <!-- 应用名称和主界面标题 -->
    <string name="app_name">智慧工厂程磊-10</string>
    <string name="main_page">智慧工厂主界面程磊2208090501510</string>

    <!-- 环境监控区域 -->
    <string name="environment">环境监控</string>
    <string name="temperature_title">温度：</string>
    <string name="temperature_value">22.46</string>
    <string name="humility_title">湿度：</string>
    <string name="humility_value">79.23%RH</string>
    <string name="light_title">光照：</string>
    <string name="light_value">591.40LX</string>

    <!-- 安全监控区域 -->
    <string name="in">进入区域监控</string>
    <string name="condition">正常</string>

    <!-- 设备控制区域 -->
    <string name="control">设备控制</string>
    <string name="ventilation_system">通风系统</string>
    <string name="air_system">空调系统</string>
    <string name="light_system">照明系统</string>
    <string-array name="control_status">
        <item>打开</item>
        <item>关闭</item>
        <item>自动</item>
    </string-array>

    <!-- Splash界面 -->
    <string name="welcome_message">欢迎使用智慧工厂应用</string>
    <string name="version">版本1.0</string>

    <!-- 全局设置 -->
    <string name="setting">设置</string>
    <string name="global_param_setting">全局参数设置</string>


    <!-- 新增全局参数字段 -->
    <string name="iot_platform_params">物联网云平台参数设置：</string>
    <string name="server_address">物联网云平台IP地址：</string>
    <string name="project_id">云平台项目标识：</string>
    <string name="login_account">云平台登录账号：</string>
    <string name="login_password">云平台登录密码：</string>


    <string name="camera_params">监控摄像设备参数设置：</string>
    <string name="camera_ip">摄像头IP地址：</string>

    <string name="sensor_params">传感器执行器参数设置：</string>
    <string name="temp_sensor_id">温度传感器ID：</string>
    <string name="temp_threshold_value">温度阈值：</string>
    <string name="hum_sensor_id">湿度传感器ID：</string>
    <string name="hum_threshold_value">湿度阈值：</string>
    <string name="light_sensor_id">光照传感器ID：</string>
    <string name="light_threshold_value">光照阈值：</string>
    <string name="body_sensor_id">人体感应设备ID：</string>
    <string name="light_controller_id">光照设备控制ID：</string>
    <string name="ventilation_controller_id">通风控制设备ID：</string>
    <string name="air_controller_id">空调控制设备ID：</string>

    <string name="save_params">保存参数</string>

    <string name="save_params_success">参数保存成功</string>
    <string name="server_address_empty">服务器地址不能为空</string>
    <string name="cloud_project_label">项目标识不能为空</string>
    <string name="cloud_account_empty">云账号不能为空</string>
    <string name="cloud_account_password_empty">云账号密码不能为空</string>
    <string name="camera_address_empty">摄像头地址不能为空</string>
    <string name="invalid_input_format">输入格式无效</string>
    <string name="invalid_input">输入无效，请检查后重试！</string>


    <string name="type_temperature">程磊-10-温度</string>
    <string name="type_humidity">程磊-10-湿度</string>
    <string name="type_light">程磊-10-光照</string>


    <string name="chart_activity_label">云平台历史数据图表</string>
</resources>