<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".SettingActivity">

    <!-- 标题栏 -->
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/global_param_setting"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 物联网云平台参数设置 -->
    <TextView
        android:id="@+id/tv_iot_platform_params"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="#FF5722"
        android:text="@string/iot_platform_params"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <GridLayout
        android:id="@+id/gl_iot_platform"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_iot_platform_params"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- 服务器地址 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_address"
            android:textSize="12sp"
            android:gravity="end"
            android:paddingRight="4dp" />
        <EditText
            android:id="@+id/et_server_address"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:ems="8"
            android:layout_columnWeight="1"
            android:padding="4dp"
            android:text="https://api.nlecloud.com"/>

        <!-- 项目标识 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project_id"
            android:textSize="12sp"
            android:gravity="end"
            android:paddingRight="4dp" />
        <EditText
            android:id="@+id/et_project_label"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:ems="8"
            android:layout_columnWeight="1"
            android:padding="4dp"
            android:text="1233118"/>

        <!-- 云平台账号 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_account"
            android:textSize="12sp"
            android:gravity="end"
            android:paddingRight="4dp" />
        <EditText
            android:id="@+id/et_cloud_account"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:ems="8"
            android:layout_columnWeight="1"
            android:padding="4dp"
            android:text="19839757907"/>

        <!-- 云平台密码 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_password"
            android:textSize="12sp"
            android:gravity="end"
            android:paddingRight="4dp" />
        <EditText
            android:id="@+id/et_cloud_account_password"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:inputType="textPassword"
            android:ems="8"
            android:layout_columnWeight="1"
            android:padding="4dp"
            android:text="Cl026397"/>
    </GridLayout>

    <!-- 监控摄像设备参数设置 -->
    <TextView
        android:id="@+id/tv_camera_params"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="#FF5722"
        android:text="@string/camera_params"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gl_iot_platform" />

    <GridLayout
        android:id="@+id/gl_camera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_camera_params"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- 摄像头地址 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera_ip"
            android:textSize="12sp"
            android:gravity="end"
            android:paddingRight="4dp" />
        <EditText
            android:id="@+id/et_camera_address"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:ems="8"
            android:layout_columnWeight="1"
            android:padding="4dp"
            android:text="192.168.0.1"/>
    </GridLayout>

    <!-- 传感器执行器参数设置 -->
    <TextView
        android:id="@+id/tv_sensor_params"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="#FF5722"
        android:text="@string/sensor_params"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gl_camera" />

    <GridLayout
        android:id="@+id/gl_sensors"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_sensor_params"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- 温度设备ID -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_sensor_id"
            android:textSize="12sp"
            android:gravity="end"
            android:paddingRight="4dp" />
        <EditText
            android:id="@+id/et_temp_sensor_id"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:ems="3"
            android:layout_columnWeight="1"
            android:padding="4dp"
            android:text="zt"/>

        <!-- 温度阈值 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_threshold_value"
            android:textSize="12sp"
            android:gravity="end"
            android:paddingRight="4dp" />
        <EditText
            android:id="@+id/et_temp_threshold_value"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:ems="5"
            android:layout_columnWeight="1"
            android:padding="4dp"
            />

        <!-- 湿度设备ID -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hum_sensor_id"
            android:textSize="12sp"
            android:gravity="end"
            android:paddingRight="4dp" />
        <EditText
            android:id="@+id/et_hum_sensor_id"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:ems="5"
            android:layout_columnWeight="1"
            android:padding="4dp"
            android:text="zh"/>

        <!-- 湿度阈值 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hum_threshold_value"
            android:textSize="12sp"
            android:gravity="end"
            android:paddingRight="4dp" />
        <EditText
            android:id="@+id/et_hum_threshold_value"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:ems="5"
            android:layout_columnWeight="1"
            android:padding="4dp" />

        <!-- 光照设备ID -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light_sensor_id"
            android:textSize="12sp"
            android:gravity="end"
            android:paddingRight="4dp" />
        <EditText
            android:id="@+id/et_light_sensor_id"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:ems="5"
            android:layout_columnWeight="1"
            android:padding="4dp"
            android:text="zl"/>

        <!-- 光照阈值 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light_threshold_value"
            android:textSize="12sp"
            android:gravity="end"
            android:paddingRight="4dp" />
        <EditText
            android:id="@+id/et_light_threshold_value"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:ems="5"
            android:layout_columnWeight="1"
            android:padding="4dp" />

        <!-- 光照设备控制ID -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light_controller_id"
            android:textSize="12sp"
            android:gravity="end"
            android:paddingRight="4dp" />
        <EditText
            android:id="@+id/et_light_controller_id"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:ems="5"
            android:layout_columnWeight="1"
            android:padding="4dp" />

        <!-- 人体感应设备ID -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/body_sensor_id"
            android:textSize="12sp"
            android:gravity="end"
            android:paddingRight="4dp" />
        <EditText
            android:id="@+id/et_body_sensor_id"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:ems="5"
            android:layout_columnWeight="1"
            android:padding="4dp" />

        <!-- 通风控制设备ID -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ventilation_controller_id"
            android:textSize="12sp"
            android:gravity="end"
            android:paddingRight="4dp" />
        <EditText
            android:id="@+id/et_ventilation_controller_id"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:ems="5"
            android:layout_columnWeight="1"
            android:padding="4dp" />

        <!-- 空调控制设备ID -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/air_controller_id"
            android:textSize="12sp"
            android:gravity="end"
            android:paddingRight="4dp" />
        <EditText
            android:id="@+id/et_air_controller_id"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:ems="5"
            android:layout_columnWeight="1"
            android:padding="4dp" />
    </GridLayout>

    <!-- 保存按钮 -->
    <Button
        android:id="@+id/btn_save_params"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_params"
        android:textColor="@color/colorWhite"
        android:background="@drawable/button_style"
        android:padding="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:onClick="onClickSave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>